<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    tools:context="com.example.android.registrarcontacto.DetalleContacto">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confimarDatos"
        android:paddingBottom="25dp"
        android:textSize="30sp"
        android:gravity="center"/>
    <TextView
        android:id="@+id/tvNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/diego_salas"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tvFecha"
        android:paddingTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/aug_8_1991"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tvTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:text="@string/_959363398"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tvEmail"
        android:paddingTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dominicsc2hs_gmailc_com"
        android:textSize="18sp" />
    <TextView
        android:id="@+id/tvDescripcion"
        android:paddingTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hola"
        android:textSize="18sp" />
    <Button
        android:id="@+id/btnEditarDatos"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/editarDatos"/>

</LinearLayout>
